--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "landing-02-aiguard",
+  "name": "landing-03-klyrapay",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -22,17 +22,18 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "gsap": "^3.14.2",
     "next": "16.1.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.182.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.2",
     "husky": "^9.1.7",
